crates/aranya-policy-compiler/tests/data/facts/bind_key_in_update_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
8 |             update F[i:?] => {} to {}
  |                        ^ Cannot update fact with wildcard keys
